system/wireguard/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: wg-easy
  namespace: wg-easy
spec:
  ingressClassName: nginx
  rules:
    - host: wg.nimeji.com
      http:
        paths:
          - backend:
              service:
                name: wg-easy-http
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - wg.nimeji.com
      secretName: wg-easy-tls
